# iolite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/test1/: lib.io
iolite-vscode/: CHANGELOG.md  README.md  bun.lockb  package.json  tsconfig.json  vsc-extension-quickstart.md
iolite-vscode/src/: extension.ts
iolite-vscode/syntaxes/: iolite.tmLanguage.json
proptest-regressions/compiler/: vm.txt
scripts/: install.sh
src/: dap_server.rs  lsp_server.rs  main.rs  net.rs  server.rs  tui_debbuger.rs  vm.rs
src/compiler/: ast.rs  byte_code_emitter.rs  escape_resolver.rs  ir.rs  ir_code_gen.rs  lexer.rs  linker.rs  mod.rs  parser.rs  runtime.rs  std.io  typechecker.rs  vm.rs  vm_code_gen.rs
src/dap/: mod.rs  server.rs
src/lsp/: mod.rs  server.rs
src/utils/: measure_time.rs  mod.rs  net.rs  sender.rs  server_process.rs
src/utils/dap/: server.rs
src/utils/lsp/: mod.rs  server.rs
src/utils/sdl2wrapper/: font.rs
tests/compiler/test10/: main.io
tests/compiler/test11/: main.io
tests/compiler/test12/: main.io
tests/compiler/test13/: main.io
tests/compiler/test14/: main.io
tests/compiler/test15/: main.io
tests/compiler/test16/: main.io
tests/compiler/test17/: main.io  stdout.test
tests/compiler/test18/: main.io
tests/compiler/test19/: main.io
tests/compiler/test2/: main.io
tests/compiler/test3/: main.io
tests/compiler/test4/: main.io
tests/dap/: test1.io
tests/examples/: breakout.io  canvas.io  image.io  keyboard.io  lines_hit.io  pong.io  rgb.io  text.io  window.io
tests/test1/: main.io
(+25 files in other folders)
