[package]
name = "iolite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
dap = "0.4.1-alpha1"
libui-ffi = "0.3.0"
lsp-types = "0.95.1"
nanoid = "0.4.0"
once_cell = "1.19.0"
proptest = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "process", "full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
